Make SSL Service work with ssl-config lib